Improve conditions in code
* Reduce `else` condition and modernize switch pattern
* Check condition after calling lock method
* Some additional code clean up