@@ -24,7 +24,6 @@ import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
-import java.util.stream.Collectors;
 
 import org.aopalliance.aop.Advice;
 import org.aopalliance.intercept.MethodInterceptor;
@@ -196,8 +195,8 @@ public class ThreadChannelConnectionFactory extends AbstractConnectionFactory
 				this.logger.warn("Unclaimed context switches from threads:" +
 						this.switchesInProgress.values()
 								.stream()
-								.map(t -> t.getName())
-								.collect(Collectors.toList()));
+								.map(Thread::getName)
+								.toList());
 			}
 			this.contextSwitches.clear();
 			this.switchesInProgress.clear();
@@ -319,23 +318,21 @@ public class ThreadChannelConnectionFactory extends AbstractConnectionFactory
 			Advice advice =
 					(MethodInterceptor) invocation -> {
 						String method = invocation.getMethod().getName();
-						switch (method) {
-							case "close":
+						return switch (method) {
+							case "close" -> {
 								handleClose(channel, transactional);
-								return null;
-							case "getTargetChannel":
-								return channel;
-							case "isTransactional":
-								return transactional;
-							case "confirmSelect":
+								yield null;
+							}
+							case "getTargetChannel" -> channel;
+							case "isTransactional" -> transactional;
+							case "confirmSelect" -> {
 								confirmSelected.set(true);
-								return channel.confirmSelect();
-							case "isConfirmSelected":
-								return confirmSelected.get();
-							case "isPublisherConfirms":
-								return false;
-						}
-						return null;
+								yield channel.confirmSelect();
+							}
+							case "isConfirmSelected" -> confirmSelected.get();
+							case "isPublisherConfirms" -> false;
+							default -> null;
+						};
 					};
 			NameMatchMethodPointcutAdvisor advisor = new NameMatchMethodPointcutAdvisor(advice);
 			advisor.addMethodName("close");
